@@ -44,9 +44,9 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.DocumentManagementDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ReviewDocuments;
 import uk.gov.hmcts.reform.prl.models.roleassignment.getroleassignment.RoleAssignmentResponse;
 import uk.gov.hmcts.reform.prl.models.roleassignment.getroleassignment.RoleAssignmentServiceResponse;
-import uk.gov.hmcts.reform.prl.models.user.UserRoles;
 import uk.gov.hmcts.reform.prl.services.SystemUserService;
 import uk.gov.hmcts.reform.prl.services.UserService;
+import uk.gov.hmcts.reform.prl.services.notifications.NotificationService;
 import uk.gov.hmcts.reform.prl.services.tab.alltabs.AllTabServiceImpl;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 
@@ -59,7 +59,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
@@ -69,6 +68,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -76,6 +76,7 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.BULK_SCAN;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CAFCASS_ROLE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CITIZEN_ROLE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CONFIDENTIAL_DOCUMENTS;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURTNAV_USER;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_ADMIN_ROLE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_STAFF;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JUDGE_ROLE;
@@ -159,6 +160,12 @@ public class ManageDocumentsServiceTest {
 
     List<Element<QuarantineLegalDoc>> courtStaffUploadDocListDocTab;
 
+    List<Element<QuarantineLegalDoc>> citizenQuarantineDocsList;
+
+    List<Element<QuarantineLegalDoc>> citizenUploadDocListDocTab;
+
+    List<Element<QuarantineLegalDoc>> courtNavQuarantineDocumentList;
+
     UserDetails userDetailsSolicitorRole;
 
     UserDetails userDetailsBulScanRole;
@@ -168,6 +175,9 @@ public class ManageDocumentsServiceTest {
     UserDetails userDetailsCafcassRole;
 
     UserDetails userDetailsCourtAdminRole;
+
+    UserDetails userDetailsCourtNavRole;
+
     UserDetails userDetailsCourtStaffRoleExpectAdmin;
 
     List<String> categoriesToExclude;
@@ -183,6 +193,9 @@ public class ManageDocumentsServiceTest {
 
     @Mock
     private RoleAssignmentApi roleAssignmentApi;
+
+    @Mock
+    private NotificationService notificationService;
 
     @Before
     public void init() {
@@ -202,7 +215,7 @@ public class ManageDocumentsServiceTest {
         parentCategories = nullSafeCollection(categoriesAndDocuments.getCategories())
             .stream()
             .sorted(Comparator.comparing(Category::getCategoryName))
-            .collect(Collectors.toList());
+            .toList();
 
         dynamicListElementList = new ArrayList<>();
         CaseUtils.createCategorySubCategoryDynamicList(parentCategories, dynamicListElementList, categoriesToExclude);
@@ -241,13 +254,18 @@ public class ManageDocumentsServiceTest {
             .roles(Collections.singletonList(JUDGE_ROLE))
             .build();
 
-
-
         userDetailsCitizenRole = UserDetails.builder()
             .id("678")
             .forename("test")
             .surname("test")
             .roles(Collections.singletonList(CITIZEN_ROLE))
+            .build();
+
+        userDetailsCourtNavRole = UserDetails.builder()
+            .id("678")
+            .forename("test")
+            .surname("test")
+            .roles(Collections.singletonList(COURTNAV_USER))
             .build();
 
         confidentialDoc = uk.gov.hmcts.reform.prl.models.documents.Document.builder()
@@ -290,8 +308,8 @@ public class ManageDocumentsServiceTest {
         UploadResponse uploadResponse = new UploadResponse(List.of(document));
         Mockito.when(caseDocumentClient.uploadDocuments(anyString(), anyString(), anyString(), anyString(), anyList()))
             .thenReturn(uploadResponse);
-        Mockito.doNothing().when(caseDocumentClient).deleteDocument(anyString(), anyString(), any(UUID.class), anyBoolean());
-
+        doNothing().when(caseDocumentClient).deleteDocument(anyString(), anyString(), any(UUID.class), anyBoolean());
+        doNothing().when(notificationService).sendNotifications(any(CaseData.class), any(QuarantineLegalDoc.class), anyString());
 
     }
 
@@ -397,6 +415,54 @@ public class ManageDocumentsServiceTest {
         legalProfQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("legalProfQuarantineDocsList");
         assertNotNull(legalProfQuarantineDocsList);
         assertEquals(1,legalProfQuarantineDocsList.size());
+        assertNull(caseDataMapUpdated.get("manageDocuments"));
+    }
+
+    @Test
+    public void testCopyDocumentIfRestrictedWithCitizenRole() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(dynamicList)
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        List<Element<QuarantineLegalDoc>> citizenQuarantineDocsListInitial = new ArrayList<>();
+        citizenQuarantineDocsListInitial.add(element(QuarantineLegalDoc.builder().build()));
+        caseDataMapInitial.put("citizenQuarantineDocsList",citizenQuarantineDocsListInitial);
+
+        List<Element<QuarantineLegalDoc>> citizenUploadDocListDocTabInitial = new ArrayList<>();
+        caseDataMapInitial.put("citizenUploadDocListDocTab",citizenUploadDocListDocTabInitial);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder().build();
+        quarantineLegalDocElement = element(quarantineLegalDoc);
+
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCitizenRole);
+
+        Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
+
+        citizenQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("citizenQuarantineDocsList");
+        assertNotNull(citizenQuarantineDocsList);
+        assertEquals(1,citizenQuarantineDocsList.size());
         assertNull(caseDataMapUpdated.get("manageDocuments"));
     }
 
@@ -548,7 +614,6 @@ public class ManageDocumentsServiceTest {
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
         when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
         when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtStaffRoleExpectAdmin);
-
         when(authTokenGenerator.generate()).thenReturn("serviceAuthToken");
 
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
@@ -1109,7 +1174,7 @@ public class ManageDocumentsServiceTest {
         when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(true);
         List<String>  loggedInUserTypeList = manageDocumentsService.getLoggedInUserType(auth);
         assertNotNull(loggedInUserTypeList);
-        assertEquals(UserRoles.CITIZEN.name(), loggedInUserTypeList.get(0));
+        assertEquals(CITIZEN_ROLE, loggedInUserTypeList.get(0));
     }
 
     @Test
@@ -1177,6 +1242,7 @@ public class ManageDocumentsServiceTest {
         when(roleAssignmentApi.getRoleAssignments(auth, authTokenGenerator.generate(), null, "345")).thenReturn(
             roleAssignmentServiceResponse);
         when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(true);
+
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
 
         courtStaffUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffUploadDocListDocTab");
@@ -1351,6 +1417,116 @@ public class ManageDocumentsServiceTest {
         List<String>  caseDataMapUpdated = manageDocumentsService.validateRestrictedReason(callbackRequest, userDetailsSolicitorRole);
         assertNotNull(caseDataMapUpdated);
         assertTrue(caseDataMapUpdated.isEmpty());
+    }
+
+    @Test
+    public void testCopyDocumentMidEventFm5Statement() {
+
+        DynamicList dynamicList1 = DynamicList.builder().value(DynamicListElement.builder()
+                .code("fm5Statements")
+                .label("fm5Statements").build())
+            .listItems(dynamicListElementList).build();
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(dynamicList1)
+            .isRestricted(YesOrNo.No)
+            .isConfidential(YesOrNo.No)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                .manageDocuments(List.of(manageDocumentsElement))
+                .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        List<String>  caseDataMapUpdated = manageDocumentsService.validateRestrictedReason(callbackRequest, userDetailsSolicitorRole);
+        assertNotNull(caseDataMapUpdated);
+        assertTrue(caseDataMapUpdated.isEmpty());
+    }
+
+    @Test
+    public void testCopyDocumentMidEventFm5StatementRestricted() {
+
+        DynamicList dynamicList1 = DynamicList.builder().value(DynamicListElement.builder()
+                .code("fm5Statements")
+                .label("fm5Statements").build())
+            .listItems(dynamicListElementList).build();
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(dynamicList1)
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.No)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                .manageDocuments(List.of(manageDocumentsElement))
+                .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        List<String>  caseDataMapUpdated = manageDocumentsService.validateRestrictedReason(callbackRequest, userDetailsSolicitorRole);
+        assertNotNull(caseDataMapUpdated);
+        assertEquals("The statement of position on non-court dispute resolution (form FM5)"
+            + " cannot contain confidential information or be restricted.", caseDataMapUpdated.get(1));
+    }
+
+    @Test
+    public void testCopyDocumentMidEventFm5StatementConfidential() {
+
+        DynamicList dynamicList1 = DynamicList.builder().value(DynamicListElement.builder()
+                .code("fm5Statements")
+                .label("fm5Statements").build())
+            .listItems(dynamicListElementList).build();
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(dynamicList1)
+            .isRestricted(YesOrNo.No)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                .manageDocuments(List.of(manageDocumentsElement))
+                .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        List<String>  caseDataMapUpdated = manageDocumentsService.validateRestrictedReason(callbackRequest, userDetailsSolicitorRole);
+        assertNotNull(caseDataMapUpdated);
+        assertEquals("The statement of position on non-court dispute resolution (form FM5) "
+            + "cannot contain confidential information or be restricted.", caseDataMapUpdated.get(0));
     }
 
     @Test
@@ -1596,6 +1772,7 @@ public class ManageDocumentsServiceTest {
         assertEquals(YesOrNo.Yes,restrictedDocuments.get(0).getValue().getHasTheConfidentialDocumentBeenRenamed());
     }
 
+
     @Test
     public void testGetQuarantineDocumentForUploaderCafcass() {
         QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
@@ -1608,6 +1785,20 @@ public class ManageDocumentsServiceTest {
         assertNotNull(document1);
         assertEquals(quarantineLegalDoc.getCafcassQuarantineDocument().getDocumentUrl(),document1.getDocumentUrl());
     }
+
+    @Test
+    public void testGetQuarantineDocumentForUploaderCitizen() {
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .citizenQuarantineDocument(uk.gov.hmcts.reform.prl.models.documents.Document
+                                           .builder().documentUrl("http://test.com/documents/d848addb-c53f-4ac0-a8ce-0a9e7f4d17ba").build()).build();
+        uk.gov.hmcts.reform.prl.models.documents.Document quarantineDocument = manageDocumentsService
+            .getQuarantineDocumentForUploader("Citizen", quarantineLegalDoc
+            );
+
+        assertNotNull(quarantineDocument);
+        assertEquals(quarantineLegalDoc.getCitizenQuarantineDocument().getDocumentUrl(),quarantineDocument.getDocumentUrl());
+    }
+
 
     @Test
     public void testGetQuarantineDocumentForUploaderBulkScan() {
@@ -1633,6 +1824,185 @@ public class ManageDocumentsServiceTest {
         assertNull(document1);
     }
 
+    @Test
+    public void testGetQuarantineDocumentForUploaderCourtNav() {
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .courtNavQuarantineDocument(uk.gov.hmcts.reform.prl.models.documents.Document
+                                            .builder().documentUrl("http://test.com/documents/d848addb-c53f-4ac0-a8ce-0a9e7f4d17ba").build())
+            .build();
+
+        document1 = manageDocumentsService
+            .getQuarantineDocumentForUploader("CourtNav", quarantineLegalDoc
+            );
+
+        assertNotNull(document1);
+        assertEquals(quarantineLegalDoc.getCourtNavQuarantineDocument().getDocumentUrl(),document1.getDocumentUrl());
+    }
+
+    @Test
+    public void testUpdateQuarantineDocsCitizenDocumentsTabFalse() {
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .hasTheConfidentialDocumentBeenRenamed(YesOrNo.No)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                          .documentUrl("00000000-0000-0000-0000-000000000000")
+                          .documentFileName("test").build())
+            .uploaderRole("Citizen").build();
+
+        List<Element<QuarantineLegalDoc>> citizenUploadedDocListDocTab = new ArrayList<>();
+        citizenUploadedDocListDocTab.add(element(quarantineLegalDoc));
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder()
+            .citizenUploadedDocListDocTab(citizenUploadedDocListDocTab)
+            .build();
+
+        List<Element<QuarantineLegalDoc>> citizenQuarantineDocumentList = new ArrayList<>();
+        citizenQuarantineDocumentList.add(element(quarantineLegalDoc));
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .citizenQuarantineDocsList(citizenQuarantineDocumentList)
+                                           .build()).build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+
+        manageDocumentsService.moveDocumentsToQuarantineTab(quarantineLegalDoc,caseData,caseDataMapInitial,"Citizen");
+
+        citizenQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapInitial.get("citizenQuarantineDocsList");
+
+        assertNotNull(citizenQuarantineDocsList);
+        assertEquals(2,citizenQuarantineDocsList.size());
+
+    }
+
+
+    @Test
+    public void testUpdateQuarantineDocsCitizenDocumentsTabTrue() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.APPLICANT)
+            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
+            .isRestricted(YesOrNo.No)
+            .isConfidential(YesOrNo.No)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .hasTheConfidentialDocumentBeenRenamed(YesOrNo.No)
+            .isConfidential(null)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                          .documentUrl("00000000-0000-0000-0000-000000000000")
+                          .documentFileName("test").build())
+            .isRestricted(null)
+            .restrictedDetails(null)
+            .categoryId("test")
+            .uploaderRole("Citizen").build();
+
+        List<Element<QuarantineLegalDoc>> citizenUploadedDocListDocTab = new ArrayList<>();
+        citizenUploadedDocListDocTab.add(element(quarantineLegalDoc));
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder()
+            .citizenUploadedDocListDocTab(citizenUploadedDocListDocTab)
+            .build();
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+
+        when(objectMapper.convertValue(Mockito.any(), Mockito.eq(QuarantineLegalDoc.class))).thenReturn(quarantineLegalDoc);
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+
+        manageDocumentsService
+            .moveDocumentsToRespectiveCategoriesNew(quarantineLegalDoc, userDetailsSolicitorRole, caseData, caseDataMapInitial, "Citizen");
+
+        citizenUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapInitial.get("citizenUploadedDocListDocTab");
+
+        assertNotNull(citizenUploadDocListDocTab);
+        assertEquals(2,citizenUploadDocListDocTab.size());
+
+    }
+
+
+    @Test
+    public void testMoveCitizenDocumentsToRespectiveCategoriesNew() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.APPLICANT)
+            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        uk.gov.hmcts.reform.prl.models.documents.Document doc = uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+            .documentFileName("Confidential_test.pdf")
+            .documentBinaryUrl("http://test.link")
+            .documentUrl("http://test.link").build();
+
+        HashMap hashMap = new HashMap();
+        hashMap.put("testDocument", doc);
+
+        quarantineLegalDocElement = element(quarantineConfidentialDoc);
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(systemUserService.getSysUserToken()).thenReturn("test");
+        when(authTokenGenerator.generate()).thenReturn("test");
+        Resource expectedResource = new ClassPathResource("task-list-markdown.md");
+        HttpHeaders headers = new HttpHeaders();
+        ResponseEntity<Resource> expectedResponse = new ResponseEntity<>(expectedResource, headers, HttpStatus.OK);
+        when(caseDocumentClient
+                 .getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
+            .thenReturn(expectedResponse);
+        when(caseDocumentClientApi.getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.any()))
+            .thenReturn(expectedResponse);
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .isConfidential(YesOrNo.Yes)
+            .citizenQuarantineDocument(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                          .documentFileName("testFileName")
+                          .documentUrl("1accfb1e-2574-4084-b97e-1cd53fd14815").build())
+            .isRestricted(YesOrNo.No).categoryId("test").build();
+        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCitizenRole);
+
+        manageDocumentsService
+            .moveDocumentsToRespectiveCategoriesNew(quarantineLegalDoc, userDetailsCitizenRole, caseData, caseDataMapInitial, "Citizen");
+        List<Element<QuarantineLegalDoc>> confidentialDocuments = (List<Element<QuarantineLegalDoc>>) caseDataMapInitial.get("confidentialDocuments");
+
+        assertNotNull(confidentialDocuments);
+        assertEquals(1,confidentialDocuments.size());
+        assertEquals("testFileName",confidentialDocuments.get(0).getValue().getCitizenQuarantineDocument().getDocumentFileName());
+
+        assertNotNull(quarantineLegalDoc);
+    }
+
 
     private static uk.gov.hmcts.reform.ccd.document.am.model.Document testDocument() {
         uk.gov.hmcts.reform.ccd.document.am.model.Document.Link binaryLink = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Link();
@@ -1648,6 +2018,143 @@ public class ManageDocumentsServiceTest {
         document.links = links;
         document.originalDocumentName = "Confidential_test.pdf";
         return document;
+    }
+
+    @Test
+    public void testMoveCourtNavDocumentsToRespectiveCategoriesNew() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.APPLICANT)
+            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        uk.gov.hmcts.reform.prl.models.documents.Document doc = uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+            .documentFileName("Confidential_test.pdf")
+            .documentBinaryUrl("http://test.link")
+            .documentUrl("http://test.link").build();
+
+        HashMap hashMap = new HashMap();
+        hashMap.put("testDocument", doc);
+
+        quarantineLegalDocElement = element(quarantineConfidentialDoc);
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(systemUserService.getSysUserToken()).thenReturn("test");
+        when(authTokenGenerator.generate()).thenReturn("test");
+        Resource expectedResource = new ClassPathResource("task-list-markdown.md");
+        HttpHeaders headers = new HttpHeaders();
+        ResponseEntity<Resource> expectedResponse = new ResponseEntity<>(expectedResource, headers, HttpStatus.OK);
+        when(caseDocumentClient
+                 .getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
+            .thenReturn(expectedResponse);
+        when(caseDocumentClientApi.getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.any()))
+            .thenReturn(expectedResponse);
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .isConfidential(YesOrNo.Yes)
+            .courtNavQuarantineDocument(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                                           .documentFileName("testFileName")
+                                           .documentUrl("1accfb1e-2574-4084-b97e-1cd53fd14815").build())
+            .isRestricted(YesOrNo.No).categoryId("test").build();
+        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtNavRole);
+
+        manageDocumentsService
+            .moveDocumentsToRespectiveCategoriesNew(quarantineLegalDoc, userDetailsCourtNavRole, caseData, caseDataMapInitial, "CourtNav");
+        List<Element<QuarantineLegalDoc>> confidentialDocuments = (List<Element<QuarantineLegalDoc>>) caseDataMapInitial.get("confidentialDocuments");
+
+        assertNotNull(confidentialDocuments);
+        assertEquals(1,confidentialDocuments.size());
+        assertEquals("testFileName",confidentialDocuments.get(0).getValue().getCourtNavQuarantineDocument().getDocumentFileName());
+
+        assertNotNull(quarantineLegalDoc);
+    }
+
+    @Test
+    public void testUpdateQuarantineDocsCourtNavDocumentsTabFalse() {
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .hasTheConfidentialDocumentBeenRenamed(YesOrNo.No)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                          .documentUrl("00000000-0000-0000-0000-000000000000")
+                          .documentFileName("test").build())
+            .uploaderRole("CourtNav").build();
+
+        List<Element<QuarantineLegalDoc>> courtNavUploadedDocListDocTab = new ArrayList<>();
+        courtNavUploadedDocListDocTab.add(element(quarantineLegalDoc));
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder()
+            .courtNavUploadedDocListDocTab(courtNavUploadedDocListDocTab)
+            .build();
+
+        courtNavQuarantineDocumentList = new ArrayList<>();
+        courtNavQuarantineDocumentList.add(element(quarantineLegalDoc));
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .courtNavQuarantineDocumentList(courtNavQuarantineDocumentList)
+                                           .build()).build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+
+        manageDocumentsService.moveDocumentsToQuarantineTab(quarantineLegalDoc,caseData,caseDataMapInitial,"CourtNav");
+
+        courtNavQuarantineDocumentList = (List<Element<QuarantineLegalDoc>>) caseDataMapInitial.get("courtNavQuarantineDocumentList");
+
+        assertNotNull(courtNavQuarantineDocumentList);
+        assertEquals(2,courtNavQuarantineDocumentList.size());
+
+    }
+
+    @Test
+    public void testUpdateQuarantineDocsBulkScanDocumentsTabFalse() {
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .hasTheConfidentialDocumentBeenRenamed(YesOrNo.No)
+            .url(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
+                          .documentUrl("00000000-0000-0000-0000-000000000000")
+                          .documentFileName("test").build())
+            .uploaderRole("CourtNav").build();
+
+        List<Element<QuarantineLegalDoc>> bulkScannedDocListDocTab = new ArrayList<>();
+        bulkScannedDocListDocTab.add(element(quarantineLegalDoc));
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder()
+            .bulkScannedDocListDocTab(bulkScannedDocListDocTab)
+            .build();
+
+        courtNavQuarantineDocumentList = new ArrayList<>();
+        courtNavQuarantineDocumentList.add(element(quarantineLegalDoc));
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .build()).build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+
+        manageDocumentsService.moveDocumentsToQuarantineTab(quarantineLegalDoc,caseData,caseDataMapInitial,"Bulk scan");
+
+        courtNavQuarantineDocumentList = (List<Element<QuarantineLegalDoc>>) caseDataMapInitial.get("bulkScannedDocListDocTab");
+
+        assertNull(courtNavQuarantineDocumentList);
+
     }
 }
 
